# CloakBrowser

./: .env.example  .gitignore  Dockerfile  Dockerfile.api  LICENSE  README-API.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: release-binary.yml
api/: __init__.py  main.py  session_manager.py
api/routers/: actions.py  pages.py  sessions.py
cloakbrowser/: __init__.py  browser.py  config.py  download.py
examples/: basic.py  recaptcha_score.py  stealth_test.py
js/: README.md  package.json
js/src/: config.ts  download.ts
js/tests/: config.test.ts  update.test.ts
tests/: test_launch.py  test_stealth.py  test_update.py
