[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloakbrowser"
dynamic = ["version"]
description = "Stealth Chromium that passes every bot detection test. Drop-in Playwright replacement with source-level fingerprint patches."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "cloakbrowser" },
]
keywords = [
    "stealth",
    "browser",
    "chromium",
    "playwright",
    "scraping",
    "anti-detect",
    "recaptcha",
    "cloudflare",
    "turnstile",
    "bot-detection",
    "fingerprint",
    "web-scraping",
    "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "playwright>=1.40",
    "httpx>=0.24",
]

[project.urls]
Homepage = "https://github.com/CloakHQ/cloakbrowser"
Documentation = "https://github.com/CloakHQ/cloakbrowser#readme"
Repository = "https://github.com/CloakHQ/cloakbrowser"
Issues = "https://github.com/CloakHQ/cloakbrowser/issues"

[tool.hatch.version]
path = "cloakbrowser/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["slow: marks tests that hit live detection sites (deselect with '-m \"not slow\"')"]
